--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ithdev/tu-ruc-js-client",
-  "version": "0.0.1",
+  "name": "tu-ruc-js-client",
+  "version": "0.0.3",
   "description": "Cliente Javascript para la API de TuRuc Paraguay",
   "main": "src/index.js",
   "scripts": {
