--- a/package.json
+++ b/package.json
@@ -14,8 +14,5 @@
     "social"
   ],
   "author": "Sebastian Alvarez, Esteban Fernandez",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.6.2"
-  }
+  "license": "ISC"
 }
