--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -44,6 +44,7 @@ jobs:
             fi
 
   build:
+    needs: tag-and-release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
