--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "lint": "eslint .",
+    "lint": "eslint . --ext .js",
+    "lint-fix": "eslint . --ext .js --fix",
     "test": "jest"
   },
   "keywords": [
@@ -18,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.56.0",
+    "eslint-config-google": "^0.14.0",
     "jest": "^29.7.0"
   }
 }
